--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nosql-social-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "![License](https://img.shields.io/badge/license-MIT%20License-blue.svg)",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,8 +19,10 @@
   "dependencies": {
     "express": "^4.18.2",
     "moment": "^2.29.4",
+    "moments": "^0.0.2",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4",
     "node": "^20.4.0"
-  }
+  },
+  "devDependencies": {}
 }
